<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:gravity="center"
    android:background="@drawable/white_10dp_conner">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@mipmap/no_pass" />

    <LinearLayout
        android:id="@+id/dialognfc_lin_nohappy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@mipmap/nfc_nohappy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="#666"
            android:gravity="center"
            android:text="@string/nfc_no_pass" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="5dp"
        android:paddingBottom="20dp"
        android:textColor="#666"
        android:textSize="16sp"
        android:text="@string/no_platform_tips"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e8e8e8" />

    <Button
        android:id="@+id/sure_tv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/sure"
        android:textColor="#2D2A31"
        android:textSize="16sp" />

</LinearLayout>