<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/btn_shape_theme_gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/new_img"
            android:layout_width="255dp"
            android:layout_height="163dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@mipmap/nfc"/>
        <LinearLayout
            android:id="@+id/new_main_lin_nfc_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:background="#99e52222"
            android:orientation="horizontal"
            android:onClick="nfcSetting">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_margin="5dp"
                    android:textSize="16sp"
                    android:text="@string/nfc_is_no_open" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="12sp"
                    android:text="@string/nfc_set" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:gravity="center_vertical|right"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:drawableEnd="@mipmap/to_right_white"
                android:layout_marginEnd="8dp"
                android:drawablePadding="5dp"
                android:textSize="16sp"
                android:text="@string/nfc_now_open" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#9698A5"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="5dp"
            android:textSize="15sp"
            android:text="@string/main_say_text" />
        <LinearLayout
            android:id="@+id/new_main_lin_nfc_not_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_shape_rectangle_redff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="5dp"
                android:textSize="14sp"
                android:text="@string/phone_not_support" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>