<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="20dp"
    android:background="@drawable/white_10dp_conner">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#222222"
            android:textSize="13sp"
            android:textStyle="bold"
            android:text="@string/identify_dialog_login"
            android:layout_centerInParent="true"
            android:layout_marginLeft="30dp"
            />
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue1e"
            android:textSize="14sp"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:src="@mipmap/nv_ico_close_black"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/remove_tips_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#99222222"
        android:layout_marginTop="24dp"
        android:textSize="13sp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:maxLines="1"
        android:maxLength="15"
        android:inputType="phone"
        android:gravity="center_vertical"
        android:hint="@string/personal_setting_input_phone"
        android:textColor="#222222"
        android:textColorHint="#99222222"
        android:background="@drawable/btn_shape_rectangle_greyf1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_shape_rectangle_greyf1"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        >
        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="14dp"
            android:maxLines="1"
            android:maxLength="8"
            android:inputType="number"
            android:hint="@string/personal_setting_input_code"
            android:background="@null"
            android:textColorHint="#99222222"
            android:textColor="#222222"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_get_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="13sp"
            android:textColor="@color/blue1e"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:text="@string/personal_setting_send_code"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/login_text"
            android:gravity="center"
            android:background="@drawable/btn_shape_black1a"/>

    </LinearLayout>

</LinearLayout>