<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@mipmap/points_activity_back"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"
                    android:src="@mipmap/points_activity_decorate"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="11dp"
                    android:text="@string/identify_dialog_tag"
                    android:textColor="#CE890E"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:textSize="18sp"
                android:textColor="#333333"
                android:textStyle="bold"
                android:gravity="center"
                tools:text="惜动力惜动力惜动力惜动力惜动力惜动力"
                />
            <ImageView
                android:id="@+id/iv_activity_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/activity_over"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible"
                />
            <!--            </RelativeLayout>-->
            <TextView
                android:id="@+id/tv_send_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="#D7A464"
                android:textSize="25sp"
                android:gravity="center"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:text="@string/identify_dialog_title"
                android:padding="15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:textSize="12sp"
                android:textColor="#333333"
                android:lineSpacingMultiplier="1.3"
                android:gravity="center"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:text="@string/identify_dialog_tip"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/btn_shape_circle_blond_d7">
            <TextView
                android:id="@+id/tv_read_details"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:text="@string/identify_dialog_read_details"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:background="#ffffff"
        android:layout_gravity="center"
        />

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/points_activity_close"
        android:layout_marginTop="10dp"
        />

</LinearLayout>